<resources>
    <string name="app_name">openinapp</string>
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="today_s_click">Today\'s Click</string>
    <string name="vishnudutt_soni">Vishnudutt Soni 👋</string>
    <string name="campaigns">Campaigns</string>
    <string name="links">Links</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="view_all_links">View all links</string>
    <string name="top_links">Top Links</string>
    <string name="view_analytics">View Analytics</string>
    <string name="best_time">Best Time</string>
    <string name="_123">NA</string>
    <string name="top_location">Top Location</string>
    <string name="good_morning">Good Morning</string>
    <string name="total_clicks">Total clicks</string>
    <string name="total_links">Total Links</string>
    <string name="top_source">Top source</string>
    <string name="recent_links">Recent Links</string>
    <string name="dashboard">Dashboard</string>
    <string name="sample_link_name">Sample Link Name</string>
    <string name="_22_aug_2022">22 Aug 2022</string>
    <string name="clicks">Clicks</string>
    <string name="link">https://samplelink.oia.bio/ashd...</string>
</resources>